@@ -1140,6 +1140,16 @@ describe Workbook do
         @book1["foo"].should == [["foo", "workbook", "sheet1", nil], ["foo", 1.0, 2.0, 4.0], ["matz", 3.0, 4.0, 4.0]] 
       end
 
+      it "should add a name of an infinite row range" do
+        @book1.add_name("foo",[1..3, nil])
+        @book1.Names.Item("foo").Value.should == "=Sheet1!$1:$3"
+      end
+
+      it "should add a name of an infinite column range" do
+        @book1.add_name("foo",[nil, "A".."C"])
+        @book1.Names.Item("foo").Value.should == "=Sheet1!$A:$C"
+      end
+
     end
   
     context "with compatibility" do      
